--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: "Roboto", sans-serif;
+}
 .ms_head {
     width: 100%;
     height: 50px;
@@ -9,7 +12,6 @@ aside{
     width: 80px;
     border: 3px solid;
     display: inline-block;
-    order: 0;
 }
 .ms_container{
     border: 3px solid orange;
@@ -19,4 +21,10 @@ aside{
 }
 div[class^='col-']{
     border: 1px solid purple;
+}
+.hd_li_box ul{
+    list-style: none;
+}
+.ms_btn{
+    background-color: blue;
 }
