Added table with pseudo selector for the icon code, ended up buttons state with failed done and process classifications and icon for actions, just ended section prossime-classi

--- a/style.css
+++ b/style.css
@@ -20,11 +20,19 @@ aside{
     display: inline-block;   
 }
 div[class^='col-']{
-    border: 1px solid purple;
+    border: 1px solid grey;
 }
 .hd_li_box ul{
     list-style: none;
 }
 .ms_btn{
     background-color: blue;
+}
+.classe{
+    display: flex;
+    align-items: inherit;
+    gap: 0.1rem;
+}
+.classe::before{ 
+    content: url(../img/class-avatar2.png);
 }
