--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@
 aside{
     height: calc(100vh - 50px);
     width: 80px;
-    border: 3px solid;
+    border: 3px solid orange;
     display: inline-block;
 }
 .ms_container{
     width: calc(100% - 85px);
     height: calc(100vh - 50px); 
-    display: inline-block;   
+    display: inline-block;
+    overflow: auto;
 }
 div[class^='col-']{
     border: 1px solid grey;
