--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ aside{
     border: 3px solid orange;
     display: inline-block;
 }
+aside ul li > p{
+    display: none; 
+}
 .ms_container{
     width: calc(100% - 85px);
     height: calc(100vh - 50px); 
@@ -42,5 +45,8 @@ div[class^='col-']{
         height: calc(100vh - 50px);
         width: 300px;
         display: inline-block;
+    }
+    aside ul li > p{
+        display: block;
     }
 }
