--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@
 aside{
     height: calc(100vh - 50px);
     width: 80px;
-    border: 3px solid orange;
     display: inline-block;
+    background-color: #092138;
+    color: white;
+    background-image: url(../img/sidebar-bg.png);
 }
 aside ul li > p{
     display: none; 
